projet_gl/src/test/deca/syntax/valid/print/printlnxFloat.deca
// Description:
//    test parser for printlnx.
//
// Resultats:
//    `> [17, 0] Program
//      +> ListDeclClass [List with 0 elements]
//      `> [17, 0] Main
//         +> ListDeclVar [List with 0 elements]
//         `> ListInst [List with 1 elements]
//            []> [18, 4] Printlnx
//                `> ListExpr [List with 1 elements]
//                   []> [18, 12] Float (1.1)
//
// Historique:
//    cree le 14/01/2024

{
    println(1.1);
}